
[package]
authors = ["koro33 <koro33g@gmail.com>"]
edition = "2021"
keywords = ["music", "streaming"]
license = "AGPL-3.0-only"
name = "lyram"
repository = "https://github.com/Koro33/lyram"
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.2", features = ["std"] }
axum = { version = "0.7.4", features = [] }
axum-extra = { version = "0.9.2", features = [
    "async-read-body",
    "cookie",
    "typed-header",
    "multipart"
] }
axum-macros = "0.4.1"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
http-body = { version = "1.0.0" }
http-body-util = { version = "0.1.0" }
hyper = { version = "1.1.0", features = ["full"] }
jsonwebtoken = "9.2.0"
lofty = { version = "0.18.0" }
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-full = "0.3.1"
rayon = { version = "1.8.0" }
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
] }
thiserror = "1.0.56"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [
    "compression-full",
    "cors",
    "decompression-full",
    "timeout",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.6.1", features = [
    "fast-rng",
    "macro-diagnostics",
    "serde",
    "v4",
    "v7",
] }
validator = { version = "0.16.1", features = ["derive"] }
walkdir = { version = "2.4.0" }

[dev-dependencies]
criterion = "0.5.1"


[profile.release]
lto = true
panic = 'abort'
strip = true
